<resources>
    <string name="video_encode_config_h_264_avc">Video Encode Config (H.264 AVC)</string>
    <string name="video_encoder">编码</string>
    <string name="resolution">分辨率</string>
    <string name="bitrate">码率</string>
    <string name="frame_rate">Frame Rate (fps)</string>
    <string name="frame_interval">I-Frame Interval</string>
    <string name="avc_profle">AVCProfile</string>
    <string name="orientation">方向</string>
    <string name="audio_encode_config_h_264_aac">Audio Encode Config (H.264 AAC)</string>
    <string name="audio_encoder">Audio Encoder</string>
    <string name="channels">Channels</string>
    <string name="sample_rate">Sample Rate (HZ)</string>
    <string name="aac_profile">AAC Profile</string>
    <string name="without_audio">Without Audio</string>
    <string name="with_audio">With Audio</string>
    <string name="start_recorder">Start Recorder</string>
    <string name="stop_recorder">Stop Recorder</string>
    <string name="restart_recorder">Restart recorder</string>
    <string name="no_permission">No Permission!</string>
    <string name="no_permission_to_write_sd_ard">No permission to write sd card</string>
    <string name="permission_denied_screen_recorder_cancel">Permission denied! Screen recorder is cancel</string>
    <string name="using_your_mic_to_record_audio">Using your mic to record audio and your sd card to save video file</string>
    <string name="codec_unsupported_size_with_framerate">codec \'%s\' unsupported size %dx%d(%d) with framerate %d</string>
    <string name="codec_unsupported_size">codec \'%s\' unsupported size %dx%d (%s)</string>
    <string name="codec_unsupported_bitrate">codec \'%s\' unsupported bitrate %d</string>
    <string name="codec_unsupported_with_framerate">codec \'%s\' unsupported framerate %d</string>
    <string name="recorder_stopped_saved_file">Recorder stopped!  Saved file</string>
    <string name="length_video">Length:</string>
    <string name="gravando">Recording...</string>
    <string name="stop">Stop</string>
    <string name="create_screenRecorder_failure">Create ScreenRecorder failure</string>
    <string name="play_audio">play Audio</string>
    <string name="stop_audio">stop Audio</string>
    <string name="audio">音频</string>
    <string name="countdown">倒计时</string>
    <string name="setting_control">控制设置</string>
    <string name="setting_video">视频设置</string>
    <string name="save_path">存储位置</string>
    <string name="unsupport_change_dir">暂不支持修改</string>
</resources>
